--- a/app/elements/challenge/tasks/javaut/javaut-task.html
+++ b/app/elements/challenge/tasks/javaut/javaut-task.html
@@ -39,14 +39,13 @@
       },
       runCode: function(){
         this.$.codeEditor.runCode("javaut", this.task.Key);
-        this.$.console.setConsole("1");
+        this.$.console.loading();
       },
       onResponse: function(r){
-        this.$.console.setConsole("2");
         this.$.console.setOutput(r.detail.response);
       },
       onError: function(r){
-        this.$.console.setConsole("3");
+        this.$.console.error();
       }
     });
   </script>
