--- a/app/elements/editor-console/javaut/javaut-console.html
+++ b/app/elements/editor-console/javaut/javaut-console.html
@@ -1,44 +1,12 @@
 <link rel="import" href="javaut-output.html">
 
 <dom-module id="javaut-console">
-  <style>
-    #consoleContainer{
-      height: 20%;
-    }
-
-    #consoleOutput{
-      border: none;
-      position: relative;
-      width: 100%;
-      height: 80%;
-      max-height: 80%;
-      left: 0;
-      right: 0;
-    }
-  </style>
-
   <template>
-
-    <div id="consoleContainer">
-      <iron-pages id="consoleOutput" selected="{{selectedConsole}}">
-        <div>
-          <p>Console output</p>
-        </div>
-        <div>
-          <p>Loading ...</p>
-        </div>
-        <div>
-          <javaut-output id="unitTestConsole" run-output="{{runOutput}}">
-          </javaut-output>
-        </div>
-        <div>
-          <p>Error.</p>
-        </div>
-      </iron-pages>
-    </div>
-
+    <general-console id="generalConsole">
+      <javaut-output id="unitTestConsole" run-output="{{runOutput}}">
+      </javaut-output>
+    </general-general>
   </template>
-  <script src="/codeground/scripts/util.js" type="application/javascript"></script>
   <script>
     Polymer({
       is: 'javaut-console',
@@ -46,21 +14,17 @@
         runOutput:{
           type: Object,
           notify: true
-        },
-        selectedConsole:{
-          type: String,
-          notify: true
         }
-      },
-      ready: function(){
-        this.selectedConsole = "0";
       },
       setOutput: function(runOutput){
         this.runOutput = runOutput;
+        this.$.generalConsole.showConsole()
       },
-      setConsole: function(console){
-        // TODO(victorbalan): Make console receive a text.
-        this.selectedConsole = console;
+      loading: function(){
+        this.$.generalConsole.loading()
+      },
+      error: function(err){
+        this.$.generalConsole.error(err)
       }
     });
   </script>
