--- a/app/elements/editor-console/output-test/output-test-console.html
+++ b/app/elements/editor-console/output-test/output-test-console.html
@@ -1,20 +1,6 @@
 <dom-module id="output-test-console">
 
   <style>
-    #consoleContainer{
-      height: 20%;
-    }
-
-    #consoleOutput{
-      border: none;
-      position: relative;
-      width: 100%;
-      height: 80%;
-      max-height: 80%;
-      left: 0;
-      right: 0;
-    }
-
     .red{
       color: red;
     }
@@ -29,34 +15,16 @@
   </style>
 
   <template>
-    <div id="consoleContainer">
-      <iron-pages id="consoleOutput" selected="{{selectedConsole}}">
-        <div>
-          <p>Console output</p>
-        </div>
-        <div>
-          <p>Loading ...</p>
-        </div>
-        <div>
-          <template is="dom-repeat" items="{{items}}">
-            <p class$="{{getClass(index)}}">{{item}}</p>
-          </template>
-        </div>
-        <div>
-          <p>Error</p>
-        </div>
-      </iron-pages>
-    </div>
-
+    <general-console id="generalConsole">
+      <template is="dom-repeat" items="{{items}}">
+        <p class$="{{getClass(index)}}">{{item}}</p>
+      </template>
+    </general-general>
   </template>
-  <script src="../../../scripts/util.js" type="application/javascript"></script>
   <script>
    Polymer({
      is: 'output-test-console',
      properties:{
-       selectedConsole:{
-         type: String
-       },
        items:{
          type: Array,
          notify: true
@@ -64,10 +32,9 @@
      },
 
      ready: function(){
-       this.bg = "green";
-       this.selectedConsole = "0";
      },
      setOutput: function(data){
+       this.$.generalConsole.showConsole()
        var output = ""
        if(data!=undefined){
          if(data.Stderr != ""){
@@ -80,18 +47,11 @@
          output = "Bad request"
        }
      },
-     getClass: function(index){
-       console.log(index)
-       for(var i=0;i<this.diffLines.length;i++){
-         if(index==this.diffLines[i]){
-           return "red";
-         }
-       }
-       return "green";
+     loading: function(){
+       this.$.generalConsole.loading()
      },
-     setConsole: function(console){
-       // TODO(victorbalan): Make console receive a text.
-       this.selectedConsole = console;
+     error: function(err){
+       this.$.generalConsole.error(err)
      }
    });
  </script>
