--- a/app/elements/editor-console/simple/simple-console.html
+++ b/app/elements/editor-console/simple/simple-console.html
@@ -1,25 +1,7 @@
-<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../../bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html">
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 
 <dom-module id="simple-console">
-
   <style>
-
-    #consoleContainer{
-      height: 20%;
-    }
-
-    #consoleOutput{
-      border: none;
-      position: relative;
-      width: 100%;
-      height: 80%;
-      max-height: 80%;
-      left: 0;
-      right: 0;
-    }
-
     iron-autogrow-textarea{
       border: none;
       position: relative;
@@ -29,47 +11,19 @@
       left: 0;
       right: 0;
     }
-
-    p{
-      font-family: "Lucida Console", Monaco, monospace;
-    }
   </style>
 
   <template>
-    <div id="consoleContainer">
-      <iron-pages id="consoleOutput" selected="{{selectedConsole}}">
-        <div>
-          <p>Console output</p>
-        </div>
-        <div>
-          <p>Loading ...</p>
-        </div>
-        <div>
-          <iron-autogrow-textarea id="output" readonly>
-          </iron-autogrow-textarea>
-        </div>
-        <div>
-          <p>Error</p>
-        </div>
-      </iron-pages>
-    </div>
-
+    <general-console id="generalConsole">
+      <iron-autogrow-textarea id="output" readonly>
+      </iron-autogrow-textarea>
+    </general-general>
   </template>
-  <script src="/codeground/scripts/util.js" type="application/javascript"></script>
   <script>
     Polymer({
       is: 'simple-console',
-      properties:{
-        selectedConsole:{
-          type: String,
-          notify: true
-        }
-      },
-      ready: function(){
-        this.selectedConsole = "0";
-      },
       setOutput: function(data){
-        console.log(data)
+        this.$.generalConsole.showConsole()
         var output = ""
         if(data!=undefined){
           output = data.Stderr !="" && data.Stderr!=undefined ? data.Stderr : data.Stdout
@@ -78,9 +32,11 @@
         }
         this.$.output.textarea.value = output;
       },
-      setConsole: function(console){
-        // TODO(victorbalan): Make console receive a text.
-        this.selectedConsole = console;
+      loading: function(){
+        this.$.generalConsole.loading()
+      },
+      error: function(err){
+        this.$.generalConsole.error(err)
       }
     });
   </script>
