--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -13,6 +13,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
@@ -34,11 +35,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="challenge/challenge-page.html">
 <link rel="import" href="challenge/challenge-display.html">
 <link rel="import" href="challenge/tasks/task-display.html">
+<link rel="import" href="challenge/tasks/simple-code/simple-code-task.html">
+<link rel="import" href="challenge/tasks/javaut/javaut-task.html">
+<link rel="import" href="challenge/tasks/output-match/output-match-task.html">
 <link rel="import" href="editor-console/simple/simple-console.html">
 <link rel="import" href="editor-console/javaut/javaut-console.html">
 <link rel="import" href="editor-console/output-test/output-test-console.html">
 <link rel="import" href="editor-console/language-selector.html">
 <link rel="import" href="editor-console/code-editor.html">
+<link rel="import" href="editor-console/general-console.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
