--- a/app/elements/editor-console/code-editor.html
+++ b/app/elements/editor-console/code-editor.html
@@ -28,7 +28,7 @@
       },
       runCode: function(lang, taskKey){
         var data = {
-          'Language': lang.tag,
+          'Language': lang,
           'Code': this.getText(),
           'Task': taskKey
         }
