--- a/app/elements/challenge/sequential/sequential-challenge.html
+++ b/app/elements/challenge/sequential/sequential-challenge.html
@@ -1,13 +1,13 @@
+<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+
 <dom-module id="sequential-challenge">
   <template>
-    <iron-ajax
-      id="loadTaskRequest"
-      handle-as="json"
-      on-response="onTaskResponse"
-      debounce-duration="1000"
-      content-type="application/json"
-      >
-    </iron-ajax>
+    <template is="dom-if" if="{{showForwardArrow}}">
+      <paper-icon-button icon="arrow-forward" style="position: absolute; right: 2%; bottom: 2%;"></paper-icon-button>
+    </template>
+    <template is="dom-if" if="{{showBackArrow}}">
+      <paper-icon-button icon="arrow-back" style="position: absolute; left: 2%; bottom: 2%;"></paper-icon-button>
+    </template>
     <div id="content">
       <paper-material elevation="1" style="width:35%;">
         <div class="flex">
@@ -16,6 +16,14 @@
         </div>
       </paper-material>
     </div>
+    <iron-ajax
+      id="loadTaskRequest"
+      handle-as="json"
+      on-response="onTaskResponse"
+      debounce-duration="1000"
+      content-type="application/json"
+      >
+    </iron-ajax>
   </template>
   <script>
     Polymer({
@@ -29,10 +37,19 @@
         task: {
           type: Object,
           notify: true
+        },
+        taskIndex: {
+          type: Number,
+          notify: true
         }
       },
+      ready: function(){
+        this.showForwardArrow = false;
+        this.showBackArrow = false;
+      },
       startChallenge: function(){
-        this.loadTaskById(this.challenge.Tasks[0]);
+        this.taskIndex = 0;
+        this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
       },
       loadTaskById: function(key){
         get(this.$.loadTaskRequest, "/task/" + key + "?result=" + localStorage.getItem("result"));
@@ -43,6 +60,10 @@
         webInterface.task = task;
         this.$.content.innerHTML = "";
         this.$.content.appendChild(webInterface);
+      },
+      displayArrows: function(){
+        this.showBackArrow = this.taskIndex > 0;
+        this.showForwardArrow = this.taskIndex < this.challenge.Tasks.length;
       }
     });
 
