--- a/app/elements/editor-console/javaut/javaut-output.html
+++ b/app/elements/editor-console/javaut/javaut-output.html
@@ -8,7 +8,7 @@
       }
     </style>
   <template>
-    <p>{{runOutput.err}}</p>
+    <p>{{runOutput.Stderr}}</p>
     <p>Number of tests <span>{{runOutput.tests.Tests}}</span></p>
     <p>Number of failures <span>{{runOutput.tests.Failures}}</span></p>
     <p>Number of errors <span>{{runOutput.tests.Errors}}</span></p>
