--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -37,7 +37,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="challenge/challenge-page.html">
 <link rel="import" href="challenge/challenge-display.html">
+<link rel="import" href="challenge/countdown-timer.html">
 <link rel="import" href="challenge/tasks/task-display.html">
+<link rel="import" href="challenge/tasks/task-timeout.html">
 <link rel="import" href="challenge/tasks/simple-code/simple-code-task.html">
 <link rel="import" href="challenge/tasks/javaut/javaut-task.html">
 <link rel="import" href="editor-console/simple/simple-console.html">
