Improve frontend  * create form to invite candidates  * create list of defined challenges for current company  * create page to display details of a challenge  * create mechanism for handling errors

--- a/app/elements/challenge/tasks/output-match/output-match-task.html
+++ b/app/elements/challenge/tasks/output-match/output-match-task.html
@@ -55,8 +55,8 @@
       onResponse: function(r){
         this.$.console.setOutput(r.detail.response);
       },
-      onError: function(r){
-        this.$.console.error()
+      onError: function(error){
+        handleError(error);
       }
     });
   </script>
