--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,12 +36,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 
 <link rel="import" href="challenge/challenge-page.html">
-<link rel="import" href="challenge/challenge-display.html">
 <link rel="import" href="challenge/countdown-timer.html">
+<link rel="import" href="challenge/challenge-detail.html">
 <link rel="import" href="challenge/tasks/task-display.html">
 <link rel="import" href="challenge/tasks/task-timeout.html">
 <link rel="import" href="challenge/tasks/simple-code/simple-code-task.html">
 <link rel="import" href="challenge/tasks/javaut/javaut-task.html">
+<link rel="import" href="challenge/challenge-list.html">
 <link rel="import" href="editor-console/simple/simple-console.html">
 <link rel="import" href="editor-console/javaut/javaut-console.html">
 <link rel="import" href="editor-console/output-test/output-test-console.html">
@@ -51,8 +52,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="statistics/statistics.html">
 <link rel="import" href="fingerprints/fingerprints.html">
 <link rel="import" href="login/login.html">
-<link rel="import" href="coders/invite-candidate.html">
 <link rel="import" href="editor-console/general-console.html">
+<link rel="import" href="coders/invite-candidate.html">
+
+<!--error pages-->
+<link rel="import" href="error/error-page.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
