--- a/app/elements/challenge/tasks/javaut/javaut-task.html
+++ b/app/elements/challenge/tasks/javaut/javaut-task.html
@@ -47,8 +47,8 @@
       onResponse: function(r){
         this.$.console.setOutput(r.detail.response);
       },
-      onError: function(r){
-        this.$.console.error();
+      onError: function(error){
+        handleError(error);
       }
     });
   </script>
